# dsp-pro-course-assignments

./: LICENSE.md  README.md
4_06_1_wav_reader/: README.md
4_06_1_wav_reader/solution/: CMakeLists.txt  README.md
4_06_1_wav_reader/solution/src/: WavReader.cpp  WavReader.hpp  main.cpp
